Documentation fixes for mobile (#2478)
* Hide sidebar by default when on mobile
Fix some overflows with some titles and codesnippets

* bare bone mobile menu attempt.

* Remove console log

* Fix menu items not displaying background properly

* remove console log

* Change page layout to grid

* Optimize menu mechanism with grid.

--- a/docs/.style/sidebar.sass
+++ b/docs/.style/sidebar.sass
@@ -2,46 +2,74 @@
 
 $sidebar-width: 300px
 
-main
-    margin-left: 0
-    transition: margin 0.3s ease-in-out
+// General menu mechanism
 
-    #sidebar-wrapper
-        width: 100%
-        transition: left 0.3s ease-in-out
-        overflow-y: auto
-        position: fixed
-        z-index: 1000
+@mixin hide-column
+    max-width: 0
+    overflow-x: hidden
 
-        #sidebar-content
-            .list-wrapper
-                transition: background-color 200ms
-            .menu-open
+@mixin reset-column
+    max-width: initial
+    overflow-x: initial
+    
+body
+    grid-template-columns: 0 auto
+
+    // Remember: Mobile first, hide the menu on mobile
+    aside
+        @include hide-column
+    
+    &.open-menu
+        grid-template-columns: auto 0
+        
+        aside
+            @include reset-column
+
+        main
+            @include hide-column
+
+    // Tablet and higher, show the menu by default
+    @include media-breakpoint-up(md)
+        grid-template-columns: $sidebar-width auto
+
+        aside
+            @include reset-column
+        
+        &.open-menu
+            // We are on desktop here
+            // Toggling the menu actually means hiding it.
+            grid-template-columns: 0 auto 
+            
+            aside
+                @include hide-column
+            
+            main
+                @include reset-column 
+
+// Sidebar specific styling
+
+aside
+    #sidebar-content
+        .accordion-button
+            padding: 0.7rem
+        .accordion-item
+            .collapsing
+                transition: none
+            .show
                 background-color: $menu-open
-            .btn
-                width: 100%
-            li
-                list-style: none
+                transition: background-color 200ms ease-in-out
         .btn
-            border: none
+            width: 100%
+        li
+            list-style: none
 
-        a
-            color: $white
-            text-decoration: none
-        p
-            letter-spacing: 0.1px
+    .btn
+        border: none
 
-        #sidebar-logo
-            #fsdocs-logo
-                width: 220px
+    a.nav-link
+        color: $white
+        text-decoration: none
 
-        &:not(.show)
-            display: none
-
-        @include media-breakpoint-up(sm)
-            width: $sidebar-width
-            left: 0
-
-    @include media-breakpoint-up(sm)
-        &:not(.toggled)
-            margin-left: $sidebar-width
+    #sidebar-logo
+        #fsdocs-logo
+            width: 220px
